--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "sucrase": "^3.18.1"
   },
   "dependencies": {
+    "aws-sdk": "^2.905.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
