--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "aws-sdk": "^2.905.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
