--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodemailer": "^6.6.0",
+    "nodemailer-sendgrid": "^1.0.3",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
